<resources>
    <string name="app_name">Packapp</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="supplier">Supplier</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_image">Product Image</string>
    <string name="upload">Upload</string>
    <string name="action_save">Save</string>
    <string name="sale">Sale</string>
    <string name="action_delete">Delete</string>
    <string name="fill_the_product_name">Fill the product name.</string>
    <string name="fill_the_supplier">Fill the Supplier.</string>
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="product_deleted">Product Deleted Successfully.</string>
    <string name="order_more">Order More</string>
</resources>
