<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/product_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/product_name"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="product_name"/>

    <TextView
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/price"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="price"/>

    <TextView
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplier"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/supplier"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="supplier"/>

    <TextView
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/subtract_quantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="-" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <Button
            android:id="@+id/add_quantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="+" />

    </LinearLayout>

    <Button
        android:id="@+id/order"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order"/>

</LinearLayout>

</ScrollView>